syntax = "proto3";

package userpb;

//    protoc --go_out=. --go_opt=paths=source_relative \
//    --go-grpc_out=. --go-grpc_opt=paths=source_relative userpb/user.proto

option go_package = "./;userpb";


service UserService {
    rpc CreateUser(CreateRequest) returns (CreateResponse);
    rpc GetAllUser(GetAllRequest) returns (stream GetAllResponse);
    rpc DeleteUser(DeleteRequest) returns (DeleteResponse);
    rpc IssueToken(TokenRequest) returns (TokenResponse);
    rpc AuthUser(AuthRequest) returns (AuthResponse);
}

message User {
    int32 id = 1;
    string email = 2;
    string password = 3;
}

message CreateRequest {
    User user = 1;
}

message CreateResponse {
    int32 id = 1;
}

message GetAllRequest {}

message GetAllResponse {
    User user = 1;
}

message DeleteRequest {
    int32 id = 1;
}

message DeleteResponse{}

message Token {
    string token = 1;
    bool valid = 2;
}

message TokenRequest {
    User user = 1;
}

message TokenResponse {
    Token token = 1;
}

message AuthRequest {
    Token token = 1;
}

message AuthResponse {}
